--- a/.github/workflows/2_validation_staging.yml
+++ b/.github/workflows/2_validation_staging.yml
@@ -22,10 +22,11 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
 
+      # 1. Ajuste de versão para 3.12 (Alinhado com Dockerfile)
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.14'
+          python-version: '3.12'
 
       - name: Install UV
         uses: astral-sh/setup-uv@v3
@@ -53,21 +54,41 @@ jobs:
           echo "🐳 Construindo imagem Docker..."
           docker build -t chatbot-cloud:staging .
 
-      - name: Verify Docker Build
+      # 2. Smoke Test adicionado (Crítico antes do Auto-Merge)
+      - name: Smoke Test Docker Image
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
         run: |
-          echo "✅ Verificando build Docker..."
-          docker images chatbot-cloud:staging
+          echo "🔥 Iniciando Smoke Test do container..."
+          docker run -d --name staging-smoke \
+            -e API_KEY=$API_KEY \
+            -p 8000:8000 \
+            chatbot-cloud:staging
+          
+          echo "⏳ Aguardando inicialização (10s)..."
+          sleep 10
+          
+          if [ "$(docker inspect -f '{{.State.Running}}' staging-smoke)" = "true" ]; then
+            echo "✅ Container está rodando e saudável!"
+            docker logs staging-smoke
+            docker rm -f staging-smoke
+          else
+            echo "❌ CRÍTICO: Container falhou ao iniciar. Abortando merge."
+            docker logs staging-smoke
+            exit 1
+          fi
 
       - name: Enable Auto-merge
         if: success()
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "✅ Todos os testes passaram! Habilitando merge automático após aprovação..."
+          echo "✅ Todos os testes e smoke test passaram!"
+          echo "🔓 Habilitando merge automático..."
           gh pr merge ${{ github.event.pull_request.number }} \
             --auto \
             --merge \
-            --subject "✅ Auto-merge: Dev -> Staging (validado automaticamente)"
+            --subject "✅ Auto-merge: Dev -> Staging (Validado com Smoke Test)"
 
       - name: Add Success Comment
         if: success()
@@ -77,14 +98,14 @@ jobs:
           gh pr comment ${{ github.event.pull_request.number }} \
             --body "✅ **Validação Concluída com Sucesso**
             
-            Todas as validações passaram:
+            O pipeline de staging validou este PR:
             - ✅ Ruff Linter
-            - ✅ Testes CI
-            - ✅ Build Docker
+            - ✅ Testes Unitários
+            - ✅ Docker Build
+            - ✅ Docker Smoke Test (Execução real)
             
-            **Próximo passo:**
-            - Aguardando aprovação manual do PR
-            - Após aprovação, o merge será realizado automaticamente"
+            **Status:**
+            - Auto-merge habilitado. O PR será mesclado assim que as aprovações de revisão forem satisfeitas."
 
       - name: Notify Failure
         if: failure()
@@ -94,9 +115,8 @@ jobs:
           gh pr comment ${{ github.event.pull_request.number }} \
             --body "❌ **Validação Falhou**
             
-            A validação automática falhou. O merge não será realizado até que os problemas sejam corrigidos.
+            O merge automático foi bloqueado devido a falhas no pipeline.
             
-            **Ações necessárias:**
-            - Verifique os erros nos testes no workflow
-            - Corrija os problemas identificados na branch dev
-            - Push das correções acionará nova validação automática"
+            **Verifique os logs:**
+            - Se falhou no 'Smoke Test', o container não subiu corretamente.
+            - Se falhou nos testes, revise a lógica."
